--- a/irGen/src/CMakeLists.txt
+++ b/irGen/src/CMakeLists.txt
@@ -7,6 +7,6 @@ set(SOURCES
 
 add_library(ir_gen ${SOURCES})
 
-add_executable(test main.cpp)
+add_executable(main main.cpp)
 
-target_link_libraries(test PUBLIC ir_gen)
+target_link_libraries(main PUBLIC ir_gen)
