--- a/irGen/tests/CMakeLists.txt
+++ b/irGen/tests/CMakeLists.txt
@@ -2,5 +2,5 @@ find_package(GTest REQUIRED)
 
 include_directories(${GTEST_INCLUDE_DIRECTORIES})
 
-add_executable(test dominatorTree.cpp)
+add_executable(test dominatorTree.cpp loopTest.cpp)
 target_link_libraries(test GTest::Main ir_gen)
