--- a/irGen/CMakeLists.txt
+++ b/irGen/CMakeLists.txt
@@ -41,4 +41,6 @@ endif()
 include_directories(include)
 
 add_subdirectory(src)
-add_subdirectory(tests)
+if (INCLUDE_TESTS)
+	add_subdirectory(tests)
+endif()
